Running all tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,9 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Module",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "test.test_suite"
-        }
+            "name":"Python Debugger: Module",
+            "type":"debugpy",
+            "request":"launch",
+            "module":"test.run_tests"}
     ]
 }
